Wed Jun 25 21:06:10 1997  Rick Niles <niles@axp745.gsfc.nasa.gov>

	* plot/__pltopt__.m: Handle key/legend names.
	Correctly set colors, line styles, and point styles.

Wed Jun 25 13:34:06 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/polyfit.m: Return fit y values as second output.
	Don't use QR factorization to solve least squares problem.

Wed Jun 18 10:24:00 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/dlqr.m: Use ao, not a, to compute k.

Tue Jun  3 12:16:00 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/path.m: New file.

Wed May 21 11:45:31 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Pass file id to dump_prefs, not file
	name.

Mon May 12 02:04:01 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Add missing semicolon.

Wed Apr  2 22:04:03 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/xor.m: Make type of return value logical.

Fri Mar 28 16:19:53 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/dump_prefs.m: Delete call to dump_1_pref for
	warn_comma_in_global_decl.

Tue Mar 25 22:00:49 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Use __OCTAVE_HOME__ to find
	octave-bug script.

Mon Mar 24 16:49:47 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/dump_prefs.m: Delete call to dump_1_pref for
	prefer_zero_one_indexing.

	* general/logical.m: New file.

Sat Mar 15 15:07:30 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/nextpow2.m: Correctly handle new meaning of is_scalar()
	and is_vector().

Thu Mar 13 16:36:35 1997  Kurt Hornik <Kurt.Hornik@ci.tuwien.ac.at>

	* specfun/erfinv.m: Scale update by sqrt (pi) / 2.
	Use tolerance of 2 * eps.

Wed Mar 12 16:57:45 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-strip): New target.
	* audio/Makefile.in: Ditto.
	* control/Makefile.in: Ditto.
	* elfun/Makefile.in: Ditto.
	* general/Makefile.in: Ditto.