@@ -65,6 +65,10 @@
 
 function plot (...)
 
+  ## XXX FIXME XXX -- these plot states should really just be set
+  ## temporarily, probably inside an unwind_protect block, but there is
+  ## no way to determine their current values.
+
   gset nologscale;
   gset nopolar;
 
