@@ -30,6 +30,10 @@
 
 function polar (x1, x2, fmt)
 
+  ## XXX FIXME XXX -- these plot states should really just be set
+  ## temporarily, probably inside an unwind_protect block, but there is
+  ## no way to determine their current values.
+
   gset nologscale;
   gset nopolar;
 
