@@ -33,6 +33,10 @@
 
 function semilogx (...)
 
+  ## XXX FIXME XXX -- these plot states should really just be set
+  ## temporarily, probably inside an unwind_protect block, but there is
+  ## no way to determine their current values.
+
   gset logscale x;
   gset nologscale y;
   gset nopolar;
